crates/hector-core/tests/snapshots/verdict_snapshot__verdict_pass_with_no_violations.snap
---
source: crates/hector-core/tests/verdict_snapshot.rs
expression: v
---
{
  "schema_version": 2,
  "hector_version": "[VERSION]",
  "status": "pass",
  "violations": [],
  "passed_checks": [
    "no-console-log"
  ],
  "elapsed_ms": 12
}
