crates/hector-core/tests/snapshots/verdict_snapshot__verdict_with_internal_engine_violation_serializes.snap
---
source: crates/hector-core/tests/verdict_snapshot.rs
expression: v
---
{
  "schema_version": 2,
  "hector_version": "[VERSION]",
  "status": "internal_error",
  "violations": [
    {
      "rule_id": "no-derived-state__internal",
      "severity": "error",
      "engine": "internal",
      "file": "src/app.tsx",
      "line": null,
      "column": null,
      "message": "semantic check requires LlmClient",
      "suggestion": null,
      "context": null
    }
  ],
  "passed_checks": [],
  "elapsed_ms": 7
}
